added some methods